test/runnable/module_level.nt
module module_level;

macro import neat.macros.assert;

int foo() { return 1; }

void main() {
    int foo() { return 2; }
    assert(foo() == 2);
    assert(.foo() == 1);
}
