test/fail_compilation/afl_2.nt
module afl_2;

void main() {
    for (bla < 10; i = 1) { }
}
